--- a/caseStudyWP/bib/refs.bib
+++ b/caseStudyWP/bib/refs.bib
@@ -133,26 +133,28 @@
   langid = {english}
 }
 
-@article{dfo2017FraserSockeye2018,
+@techreport{dfo2017FraserSockeye2018,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
   title = {The 2017 {{Fraser Sockeye Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Nerka}}) Integrated Biological Status Re-Assessment under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2018},
+  number = {2018/017},
   pages = {17},
   abstract = {This SAR reports on the first re-assessment of biological status under the Wild Salmon Policy (WSP). This work was completed for 24 Fraser Sockeye Salmon Conservation Units (CUs) in 2017, which updates the previous statuses for these CUs (DFO 2012).},
   langid = {english},
   file = {C\:\\Users\\worc\\Zotero\\storage\\CIX4WXHG\\The 2017 Fraser Sockeye Salmon (Oncorhynchus nerka.pdf}
 }
 
-@article{dfoAssessmentWestCoast2012a,
+@techreport{dfoAssessmentWestCoast2012,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
   title = {Assessment of {{West Coast Vancouver Island Chinook}} and 2010 Forecast},
   author = {DFO},
   year = {2012},
-  journal = {Canadian Science Advisory Secretariat Science Advisory Report},
-  volume = {2012/032}
+  number = {2012/032}
 }
 
 @techreport{dfoCanadaPolicyConservation2005,
-  title = {Canada's Policy for Conservation of Wild {{Pacific}} Salmon},
+  title = {Canada's {{Policy}} for {{Conservation}} of {{Wild Pacific Salmon}}},
   year = {2005},
   address = {{Vancouver}},
   institution = {{Fisheries and Oceans Canada}},
@@ -172,10 +174,11 @@
 }
 
 @techreport{dfoIntegratedBiologicalStatus2016,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}.},
   title = {Integrated {{Biological Status}} of {{Southern British Columbia Chinook Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Tshawytscha}}) under the {{Wild Salmon Policy}}},
   author = {{DFO}},
   year = {2016},
-  number = {Can. Sci. Advis. Sec. Sci. Advis. Rep. 2016/042},
+  number = {2016/042},
   pages = {15},
   langid = {english}
 }
@@ -186,6 +189,18 @@
   year = {2021},
   pages = {599},
   langid = {english}
+}
+
+@techreport{dfoScienceAdvicePrecautionary2021,
+  type = {{{DFO Can}}. {{Sci}}. {{Advis}}. {{Sec}}. {{Sci}}. {{Advis}}. {{Rep}}},
+  title = {Science {{Advice}} for {{Precautionary Approach Harvest Strategies}} under the {{Fish Stocks Provisions}}},
+  author = {{DFO}},
+  year = {2021},
+  number = {2021/004},
+  pages = {34},
+  abstract = {This Science Advisory Report (SAR) provides advice to the Science Sector concerning the implications of the revised Fisheries Act (2019), particularly the Fish Stocks provisions (FSP). The FSP are viewed in light of Canada's Fishery Decision-Making Framework Incorporating the Precautionary Approach (the `PA Policy'). The advice is organized into sections according to the text of the new legislation. Key points selected from the recommendations in the body of this report appear below.},
+  langid = {english},
+  file = {C\:\\Users\\worc\\Zotero\\storage\\YVC856LV\\Science Advice for Precautionary Approach Harvest .pdf}
 }
 
 @techreport{dfoWCVISalmonBulletin2021,
@@ -417,6 +432,21 @@
   pages = {ix + 81 p},
   langid = {english},
   file = {C\:\\Users\\worc\\Zotero\\storage\\55RZH9X5\\Korman et al. - Evaluation framework for assessing potential Pacif.pdf}
+}
+
+@article{kristensenTMBAutomaticDifferentiation2016,
+  title = {{{{\textbf{TMB}}}} : Automatic {{Differentiation}} and {{Laplace Approximation}}},
+  shorttitle = {{{{\textbf{TMB}}}}},
+  author = {Kristensen, Kasper and Nielsen, Anders and Berg, Casper W. and Skaug, Hans and Bell, Bradley M.},
+  year = {2016},
+  journal = {Journal of Statistical Software},
+  volume = {70},
+  number = {5},
+  issn = {1548-7660},
+  doi = {10.18637/jss.v070.i05},
+  abstract = {TMB is an open source R package that enables quick implementation of complex nonlinear random effects (latent variable) models in a manner similar to the established AD Model Builder package (ADMB, http://admb-project.org/; Fournier et al. 2011). In addition, it offers easy access to parallel computations. The user defines the joint likelihood for the data and the random effects as a C++ template function, while all the other operations are done in R; e.g., reading in the data. The package evaluates and maximizes the Laplace approximation of the marginal likelihood where the random effects are automatically integrated out. This approximation, and its derivatives, are obtained using automatic differentiation (up to order three) of the joint likelihood. The computations are designed to be fast for problems with many random effects ({$\approx$} 106) and parameters ({$\approx$} 103). Computation times using ADMB and TMB are compared on a suite of examples ranging from simple models to large spatial models where the random effects are a Gaussian random field. Speedups ranging from 1.5 to about 100 are obtained with increasing gains for large problems. The package and examples are available at http://tmb-project.org/.},
+  langid = {english},
+  file = {C\:\\Users\\worc\\Zotero\\storage\\3TLL7HLD\\Kristensen et al. - 2016 - TMB  Automatic Differentiation and Laplace.pdf}
 }
 
 @article{leeDiverseKnowledgeSystems2019,
