--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -49,7 +49,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 ### Previous assessments
 
 Declines in IF Coho spawner abundance throughout the 1990’s led to a suite of management actions to promote recovery, including significant fishery restrictions starting in 1998 [@deckerAssessmentInteriorFraser2014]. Evidence of a new, lower productivity regime starting in return year 1994 has been documented [@deckerAssessmentInteriorFraser2014] that coincides with declines in spawner abundances. In 2002, the IF Coho stock management unit was designated 'endangered; by the  Committee on the Status of Endangered Wildlife in Canada (COSEWIC) based on the stock unit being assessed as a single 'Designatable Unit' (DU). 
-Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) lead to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; [@dfoWildSalmonPolicy2015]). As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status designation for the IF Coho DU from 'endangered' to 'threatened' [@cosewic_cosewic_2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
+Subsequent work by the Interior Fraser Coho Recovery Team (IFCRT) lead to a conservation strategy outlining short-term and long-term recovery objectives for the management unit [@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006]. In 2014, @deckerAssessmentInteriorFraser2014 assessed status relative to the 2006 IFCRT objectives, and concluded that IF coho had been above the short-term recovery target of in every year since 2008, and above the long-term recovery target in the most recent two return years (2012 and 2013). Also in 2014, Interior Fraser Coho were assessed under the framework of DFO’s Wild Salmon Policy (WSP). The WSP Integrated Status Assessment classified three of these CUs as being amber status (Middle Fraser, Fraser Canyon, South Thompson) and the remaining two CUs as amber/green status (Lower Thompson, North Thompson; [@dfoWildSalmonPolicy2015]). As part of the WSP assessment, $S_{gen}$ was estimated for each CU and used as one of several benchmarks considered when assigning integrated CU status. A subsequent COSEWIC assessment in 2016 upgraded the status designation for the IF Coho DU from 'endangered' to 'threatened' [@cosewicCOSEWICAssessmentStatus2016]. In 2018, DFO undertook a Recovery Potential Assessment (RPA) for Interior Fraser Coho that described status, habitat, threats, limiting factors to recovery, candidate recovery targets, and abundance projections for the DU, as well as recommendations regarding mitigation and allowable harm [@arbeiderInteriorFraserCoho2020]. 
 
 ### History of aggregate-abundance based reference points
 
@@ -288,9 +288,9 @@ Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confide
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table @ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. 
+Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table \@ref(tab:logisticDiagIFC2020)). Assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. 
 
-An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure @ref(fig:coho-logisticACF-IM)). 
+An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure \@ref(fig:coho-logisticACF-IM)). 
 
 The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 <!--CH: this table and above text does not appear correctly on the knitted  pdf version. I'm not sure why. Also, I broke up the 1 pgh above into a few smaller ones; feel free to revise-->
