--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -36,7 +36,7 @@ The projection-based LRPs approach relies on closed-loop simulation model to pro
 
 The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics via consideration of alternative future scenarios. For example, for the WCVI chinook study case, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the interior Fraser coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
-We also demonstrated that the projection-based LRPs is sensitive to the assumed levels of exploitation rate in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability among stock-recruitment parameters increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(sensitivity-of-projection-based-lrps-to-exploitation-rates). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
+We also demonstrated that the projection-based LRPs is sensitive to the assumed levels of exploitation rate in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability among stock-recruitment parameters increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). This feature of the approach could be used in future exercises to identify the optimum levels of exploitation, to ensure that the aggregate abundance LRP is in line with current observed abundances. 
  
 
 
